# bsky-manager

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: bsky.ts
