[package]
name = "bsky-manager"
version = "0.1.0"
description = "Bluesky post management desktop app"
authors = ["bsky-manager contributors"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "bsky_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
